--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,18 @@ spring.datasource.username=${USER_BANCO:postgres}
 # - Senha do banco
 spring.datasource.password=${SENHA_BANCO:123}
 
-# == CONFIGURACOES POSTGRESQL ==
+# == CONFIGURACOES JPA ==
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 # == CONFIGURACOES PERFIL ==
 # Perfil de desenvolvimento, se não estiver definido, vai usar o perfil dev
 spring.profiles.active=${SPRING_PROFILE_ACTIVE:dev}
 
-# == CONFIGURACOES LOG ==
-#logging.level.org.springframework=INFO
-#logging.level.com.seuprojeto=DEBUG
+# == CONFIGURACOES FLYWAY ==
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.out-of-order=true
