--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 
 # == CONFIGURACOES PERFIL ==
-# Perfil de desenvolvimento, se não estiver definido, vai usar o perfil dev
+# Perfil de desenvolvimento, se nao estiver definido, vai usar o perfil dev
 spring.profiles.active=${SPRING_PROFILE_ACTIVE:dev}
 
 # == CONFIGURACOES FLYWAY ==
