--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=${URL_BANCO:jdbc:postgresql://localhost:5432/banco_sangue}
 # - Usuario do banco (padrao postgres)
 spring.datasource.username=${USER_BANCO:postgres}
 # - Senha do banco
-spring.datasource.password=${SENHA_BANCO:123}
+spring.datasource.password=${SENHA_BANCO}
 
 # == CONFIGURACOES JPA ==
 spring.datasource.driver-class-name=org.postgresql.Driver
