--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=banco-sangue
 # - URL do banco (padrao banco_sangue)
 spring.datasource.url=${URL_BANCO:jdbc:postgresql://localhost:5432/banco_sangue}
 # - Usuario do banco (padrao postgres)
-spring.datasource.username=${USER_BANCO:postgres}
+spring.datasource.username=${USER_BANCO}
 # - Senha do banco
 spring.datasource.password=${SENHA_BANCO}
 
