--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=banco-sangue
 # - URL do banco (padrao banco_sangue)
 spring.datasource.url=${URL_BANCO:jdbc:postgresql://localhost:5432/banco_sangue}
 # - Usuario do banco (padrao postgres)
-spring.datasource.username=${USER_BANCO}
+spring.datasource.username=${USER_BANCO:postgres}
 # - Senha do banco
-spring.datasource.password=${SENHA_BANCO}
+spring.datasource.password=${SENHA_BANCO:123}
 
 # == CONFIGURACOES JPA ==
 spring.datasource.driver-class-name=org.postgresql.Driver
