Alteração application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=banco-sangue
 
 # == VARIAVEIS POSTGRESQL ==
 # - URL do banco (padrao banco_sangue)
-spring.datasource.url=${URL_BANCO:jdbc:postgresql://localhost:5432/banco_sangue}
+spring.datasource.url=${URL_BANCO}
 # - Usuario do banco (padrao postgres)
 spring.datasource.username=${USER_BANCO}
 # - Senha do banco
