--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.application.name=banco-sangue
 
 # == VARIAVEIS POSTGRESQL ==
 # - URL do banco (padrao banco_sangue)
-spring.datasource.url=${URL_BANCO}
+spring.datasource.url=jdbc:postgresql://dpg-d095sm6uk2gs73a1fe90-a:5432/banco_sangue
 # - Usuario do banco (padrao postgres)
-spring.datasource.username=${USER_BANCO}
+spring.datasource.username=postgress
 # - Senha do banco
-spring.datasource.password=${SENHA_BANCO}
+spring.datasource.password=tdL25xTsqawIhPvAaGZ6RBtPHRcAUdL9
 
 # == CONFIGURACOES JPA ==
 spring.datasource.driver-class-name=org.postgresql.Driver
